Bug 398305 - FF Bookmarks KRunner does not work with database created with FF 58 or later
Summary: FF Bookmarks KRunner does not work with database created with FF 58 or later
Status: RESOLVED FIXED
Alias: None
Product: frameworks-krunner
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.49.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-06 01:52 UTC by Stefan Brüns
Modified: 2018-10-12 05:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Brüns 2018-09-06 01:52:16 UTC
Current FF versions no longer create a "favicon_id" column in its places.sqlite database. As a result, the bookmark query fails and no results are returned.

See also:
https://phabricator.kde.org/D10610
Comment 1 Stefan Brüns 2018-09-06 22:55:50 UTC
Git commit cb99ab735c813b250f4cd5031b4b078fe0b6c250 by Stefan Brüns.
Committed on 06/09/2018 at 22:55.
Pushed by bruns into branch 'master'.

KRunner: remove no longer existant and unused column from SQL query

Summary:
The favicon_id is not used in the query results, and may not even exist
when the places db has been created with FF 58 or later. In case the
column does not exist the query fails completely.

Test Plan:
1. Create a new FF profile
2. Add some bookmarks
3. Do some queries

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D15305

M  +4    -4    runners/bookmarks/browsers/firefox.cpp

https://commits.kde.org/plasma-workspace/cb99ab735c813b250f4cd5031b4b078fe0b6c250
Comment 2 boospy 2018-09-09 18:28:15 UTC
Thanks for the fix. Waiting for Update in NEON 18.04 :)
Comment 3 Oleg Solovyov 2018-10-11 08:49:11 UTC
(In reply to boospy from comment #2)
> Thanks for the fix. Waiting for Update in NEON 18.04 :)

Request for backporting this to 5.12 LTS, 5.13 and 5.14 if possible
Comment 4 Stefan Brüns 2018-10-11 12:28:29 UTC
Should be in 5.14.0
Backport to 5.12 LTS probably
5.13 - definitely no
Comment 5 Nate Graham 2018-10-11 22:53:39 UTC
Git commit 99fa6ccc57c5038ffb16d2e999893d55dc91f5b1 by Nate Graham, on behalf of Stefan Brüns.
Committed on 11/10/2018 at 22:44.
Pushed by ngraham into branch 'Plasma/5.12'.

KRunner: remove no longer existant and unused column from SQL query

Summary:
The favicon_id is not used in the query results, and may not even exist
when the places db has been created with FF 58 or later. In case the
column does not exist the query fails completely.

Test Plan:
1. Create a new FF profile
2. Add some bookmarks
3. Do some queries

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D15305

M  +4    -4    runners/bookmarks/browsers/firefox.cpp

https://commits.kde.org/plasma-workspace/99fa6ccc57c5038ffb16d2e999893d55dc91f5b1
Comment 6 Nate Graham 2018-10-11 22:54:06 UTC
Cherry-picked into the 5.12 stable branch.
Comment 7 boospy 2018-10-12 05:27:26 UTC
Thanks a lot!! :)