KRunner: remove no longer existant and unused column from SQL query

Summary:
The favicon_id is not used in the query results, and may not even exist
when the places db has been created with FF 58 or later. In case the
column does not exist the query fails completely.

BUG: 398305

Test Plan:
1. Create a new FF profile
2. Add some bookmarks
3. Do some queries

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D15305